added buttons and pages

--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 </head>
 <body>
     <div class="tab">
-        <button id="knopEen">ONE</button>
-        <button id="knopTwee">TWO</button>
-        <button id="knopDrie">THREE</button>
+        <button id="knopEen">Summary</button>
+        <button id="knopTwee">Practical Info</button>
+        <button id="knopDrie">Contact</button>
       </div>
       <div id="One" class="tabContent">
-        <h3>TAB ONE</h3>
-        <p>This is tab 1!</p>
+        <h3>Summary</h3>
+        <p>Food festival</p>
       </div>
       
       <div id="Two" class="tabContent">
-        <h3>TAB TWO</h3>
-        <p>This right here, is the 2nd tab..
+        <h3>Practical Info</h3>
+        <p>Directions etc</p>
+        </div>
       
       <div id="Three" class="tabContent">
-        <h3>TAB THREE</h3>
-        <p>Which is followed by tab 3.</p>
+        <h3>Contact Form</h3>
+        <p>Contact us here.</p>
       </div>
 </body>
 </html>
