--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>oneDayChallenge</title>
 </head>
 <body>
+  <main>
     <section class="tab">
         <button id="knopEen">Summary</button>
         <button id="knopTwee">Practical Info</button>
@@ -46,5 +47,6 @@
           </form>
         </section>
     </section>
+  </main>
 </body>
 </html>
