added text about food festival

--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
     </nav>
       <section id="One" class="tabContent">
         <h3>Summary</h3>
-        <p>Food festival</p>
+        <p>Food festival. Taste of Antwerp (Antwerpen Proeft) is an event held in May at Waagnatie Expo & Events in Antwerp, Belgium. It attracts visitors with a great selection of food served by more than 30 top local restaurants, Michelin-starred chefs and renowned caterers at affordable prices.
+
+          The offering includes the best from international cuisines, including Belgian-French, Italian, Japanese and pan-African.
+          Venue
+          Waagnatie Expo&Events
+          Address
+          Rijnkaai 150, 2000 Antwerp, Belgium
+          Type
+          International food festival, Haute cuisine, Artisan food fair, Trade fair
+          Dedicated to
+          Antwerp  Local gastro-scene  Haute cuisine
+          Serving
+          Food made by local restaurants, Michelin-starred chefs, and renowned caterers
+          Duration
+          4 days
+          Frequency
+          Annual
+          Since
+          2007</p>
       </section>
       
       <section id="Two" class="tabContent">
