correct merge signs

--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-<<<<<<< HEAD
-
-=======
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <script src="script.js"></script>
->>>>>>> fa50b157c0c6f62148a1a27a253dd90038a4e5bc
+
   <title>oneDayChallenge</title>
 </head>
 <body>
@@ -79,9 +75,7 @@
         </div>
     </section>
   </main>
-<<<<<<< HEAD
   <script src="script.js"></script>
-=======
   <footer><b>
     <p>Antwerps Biggest Food festival</p>
     <p>Duration: 4 days</p>
@@ -89,7 +83,6 @@
     <p>Since 2007</p>
     <p>Expected Visitors: 2000</p>
     <p id="counter"></p>
-  </footer></b>
->>>>>>> fa50b157c0c6f62148a1a27a253dd90038a4e5bc
+    </b></footer>
 </body>
 </html>
