--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <img src="Image/foodtasting.jpg" width="100%" /> 
+    <img class="imageSlide" src="Image/foodtasting.jpg" width="100%" /> 
     <i id="previous" class="fa fa-angle-double-left" style="font-size:36px"></i>
     <i id="next" class="fa fa-angle-double-right" style="font-size:36px"></i>
 
@@ -76,12 +76,9 @@
     </section>
   </main>
   <script src="script.js"></script>
-  <footer><b>
-    <p>Antwerps Biggest Food festival</p>
-    <p>Duration: 4 days</p>
-    <p>Frequency: Annual</p>
-    <p>Since 2007</p>
-    <p>Expected Visitors: 2000</p>
+  <footer class="footerInfo"><b>
+    <p>Antwerps Biggest Food festival, Duration: 4 days.</p>
+    <p>Frequency: Annual. Expected Visitors: 2000, Since 2007.</p>
     <p id="counter"></p>
     </b></footer>
 </body>
