--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h3>Contact Form</h3>
         <p>Contact us here.</p>
         <div class="container">
-          <form action="contactPage">
+          <form action="contactPage" id="contact>
         
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your first name..">
