adding stuff to index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>oneDayChallenge</title>
 </head>
-<body>
+<body onload="startCounter()">
   <header>
     <img class="imageSlide" src="Image/foodtasting.jpg" width="100%" /> 
     <i id="previous" class="fa fa-angle-double-left" style="font-size:36px"></i>
