--- a/proefpagina.html
+++ b/proefpagina.html
@@ -24,7 +24,7 @@ section#One{display: block;}
 </style>
 
 </head>
-<body>
+<body onload="startCounter()">
 <button id="knopEen">Summary</button>
 <button id="knopTwee">Practical Info</button>
 <button id="knopDrie">Contact</button>
