--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script>
-    let x=0;
-    function startCounter(){
-      let timing=setTimeout(Func, 500);
+  <script src="script.js"></script>
 
-      function Func() {
-       x=x+1;
-      document.getElementById("counter").innerHTML=x;
-      }
-    }
-    startCounter();
-  </script>
   <title>oneDayChallenge</title>
 </head>
-<body>
+<body onload="startCounter()">
   <header>
     <img class="imageSlide" src="Image/foodtasting.jpg" width="100%" /> 
     <i id="previous" class="fa fa-angle-double-left" style="font-size:36px"></i>
